--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "14.2.14",
+    "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18"
   },
